--- a/client/src/Components/Welcome/wrapper.module.css
+++ b/client/src/Components/Welcome/wrapper.module.css
@@ -29,48 +29,6 @@
     transition: opacity 1s ease-in;
 }
 
-.photoDiv {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    gap: 2em;
-    text-align: center;
-    position: relative;
-}
-
-.card {
-    background-color: #2E2E2E;
-    width: 20%;
-    height: auto;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
-}
-
-.card h1 {
-    color: #dc5304;
-    padding: 1em;
-    font-weight: bold;
-}
-
-.price {
-    font-size: 1.3rem;
-    color: white;
-}
-
-.images {
-    width: 100%;
-    object-fit:fill
-}
-
-.card div {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    gap: 13em;
-    padding-bottom: 1em;
-}
-
 .text {
     color: white;
     font-size: 1.5rem;
@@ -102,4 +60,91 @@
 
 .animateText {
     opacity: 1;
+}
+
+.navBtn {
+    position: fixed;
+    display: none;
+}
+
+.navbar {
+    transform: translateX(-100%);
+}
+
+.overlay {
+    display: none;
+}
+
+@media (max-width: 768px) {
+    .navBtn {
+        display: block;
+        color: #dc5404;
+        height: 50px;
+        top: 0;
+        left: 0;
+        padding: 1em;
+        cursor: pointer;
+    }
+
+    .navbar {
+        display: flex;
+        justify-content: center;
+        color: white;
+        position: fixed;
+        left: 0;
+        background-color: rgb(52, 62, 67, 1);
+        height: 100vh;
+        z-index: 999;
+        width: 200px;
+        transition: transform .2s;
+    }
+
+    .navList {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+        padding: 1em;
+    }
+
+    .navList li {
+        list-style: none;
+        font-size: 1.3rem;
+        transition: color .2s;
+    }
+
+    .navList li:hover {
+        color: #dc5404;
+    }
+
+    .btn {
+        border-radius: 15px;
+        transition: background-color .2s, color .2s;
+        border: none;
+        margin-bottom: .5em;
+        font-weight: bold;
+    }
+
+    .btn:hover {
+        background-color: #dc5404;
+        color: white;
+    }
+
+    .overlay {
+        background-color: rgba(0, 0, 0, 0.8);
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: 1;
+    }
+
+    .openSidebar {
+        transform: translateX(0);
+    }
+
+    .setOverlay {
+        display: block;
+    }
 }
